k8s/microsservices/ngo-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ngo-service
  namespace: ngo-ns
spec:
  type: ClusterIP
  selector:
    app: ngo-service
  ports:
    - name: http
      port: 80
      targetPort: 8081
