k8s/microsservices/ngo-service/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ngo-netpol
  namespace: ngo-ns
spec:
  podSelector:
    matchLabels:
      app: ngo-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Trafego do Gateway API
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-api-ns
      ports:
        - protocol: TCP
          port: 8081
    # Trafego de monitoramento (Prometheus, Loki, OTel)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-ns
      ports:
        - protocol: TCP
          port: 8081
    # Health checks do GCP Cloud Load Balancer
    - from:
        - ipBlock:
            cidr: 35.191.0.0/16
        - ipBlock:
            cidr: 130.211.0.0/22
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - {}
